# tp_kedro_weather

./: DEMARRAGE_RAPIDE.txt  FICHIERS_CLES.md  GUIDE_UTILISATION.md  README.md  README_EXERCICE.md  RESUME_EXERCICE.md  pyproject.toml  requirements.txt
conf/base/: catalog.yml
src/tp_kedro_weather/: __init__.py  __main__.py  settings.py
src/tp_kedro_weather/pipelines/data_processing/: __init__.py  nodes.py  pipeline.py  reporting.py
