[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "tp_kedro_weather"
readme = "README.md"
dynamic = [ "version",]
dependencies = [ "ipython>=8.10", "jupyterlab>=3.0", "notebook", "kedro~=1.0.0",]

[project.scripts]
tp-kedro-weather = "tp_kedro_weather.__main__:main"

[tool.kedro]
package_name = "tp_kedro_weather"
project_name = "tp_kedro_weather"
kedro_init_version = "1.0.0"
tools = "['None']"
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.version]
attr = "tp_kedro_weather.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "692b2e44bf0c4dcf895e30bde7407afa"
